<resources>
    <string name="app_name">Earn to Bank</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="task">Task</string>
    <string name="pocket">Pocket</string>
    <string name="redeem">Redeem</string>
    <string name="history">History</string>
    <string name="group">Group</string>
    <string name="alert">Alert</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_not_found">Data not found</string>
    <string name="home">Home</string>
    <string name="total_amount">Total Amount</string>
    <string name="send">Send</string>
    <string name="amount">Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="users">Users</string>
    <string name="ref">References</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="telegram">Telegram</string>

    <string name="app_id">ca-app-pub-9733597647251062~5398975578</string>
    <string name="important">Important</string>
    <string name="impression">Impression</string>
    <string name="click">Click</string>
    <string name="withdrawel">Withdrawel</string>
    <string name="references">References</string>
</resources>
